--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ lHere is your updated HTML code with the requested changes:
     <!-- Home Section -->
     <div id="home" class="section active fade-in">
         <img src="profile.jpg" alt="Profile" class="profile-pic">
-        <h1>SHANKER</h1>
+        <h1>SANKAR</h1>
         <p>Aspiring Full-Stack Developer | Passionate about Technology</p>
         <h2>About Me</h2>
         <p>I am a second-year BSc IT student passionate about full-stack development. Currently enhancing my skills in web and software development while preparing for real-world projects.</p>
