--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ lHere is your updated HTML code with the requested changes:
     <!-- Resume Section -->
     <div id="resume" class="section fade-in">
         <h2>Resume</h2>
-        <a href="resume.pdf" class="resume-btn" download>Download My Resume (PDF)</a>
+        <a href="sankar.pdf" class="resume-btn" download>Download My Resume (PDF)</a>
     </div>
 
     <!-- Contact Section -->
