--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ lHere is your updated HTML code with the requested changes:
 
     <!-- Home Section -->
     <div id="home" class="section active fade-in">
-        <img src="profile.jpg" alt="Profile" class="profile-pic">
+        <img src="IMG_20250402_205637_423.jpg" alt="Profile" class="profile-pic">
         <h1>SANKAR</h1>
         <p>Aspiring Full-Stack Developer | Passionate about Technology</p>
         <h2>About Me</h2>
